--- a/components/CapStatisticCard/_capStatisticCard.scss
+++ b/components/CapStatisticCard/_capStatisticCard.scss
@@ -2,12 +2,11 @@
 
 .stats-card {
     .stats-item {
-        padding-bottom: $CAP_SPACE_24;
         .stats-text {
-            padding-bottom: $CAP_SPACE_04;
+            margin-bottom: $CAP_SPACE_04;
         }
-        .stats-val {
-            padding-bottom: $CAP_SPACE_08;
+        .stats-sub-text {
+            margin-top: $CAP_SPACE_08;
         }
     }
 }
